--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,14 @@
 </head>
 <body>
 <header class="header">
-   <div class="nav">
+   <nav class="navbar">
       <div class="container">
          <div class="row align-items-center">
             <div class="col-md-3">
-                  <div class="logo">
+                  <a class="logo" href="#">
                      <img src="img/logo/logo.svg" alt="logo" class="logonft">
-                     <div class="logo-header">
-                        Ocean<span class="nft-elem">NFT</span>
-                     </div>
-                     <!-- /.logo-header -->
-                  </div>
+                        <span class="logo-text" >Ocean<span class="logo-elem">NFT</span></span>
+                  </a>
             </div>
             <!-- /.col-md-3 -->
 
@@ -54,8 +51,8 @@
          <!-- /.row -->
       </div>
       <!-- /.container -->
-   </div>
-   <!-- /.nav -->
+   </nav>
+   <!-- /.navbar -->
    <div class="main">
       <div class="container">
          <div class="row">
@@ -146,7 +143,7 @@
                   </div>
                   <!-- /.col-md-6 -->
 
-                  <div class="col-md-6">
+                  <div class="col-md-6 timer">
                      <div class="hero-account__auction">
                         <h3 class="hero-account__auction-title"> Auction Ends in </h3>
                      </div>
@@ -170,7 +167,7 @@
                      </div>
                      <!-- /.hero-account__time -->
                      <div class="hero-account__btn">
-                        <button class="bid">Place Bid</button>
+                        <button class="btn-bid">Place Bid</button>
                      </div>
                      <!-- /.hero-account__btn -->
                   </div>
@@ -190,5 +187,45 @@
    <!-- /.main -->
 </header>
 <!-- /.header -->
+<section class="partners">
+   <div class="container">
+      <div class="row partners-block">
+         <div class="col-md-3">
+               <img class="prtn-img" src="img/partners/Binance.png" alt="">
+         </div>
+         <!-- /.col-md-3 -->
+         <div class="col-md-2">
+            <img class="prtn-img" src="img/partners/Ethereum.png" alt="">
+         </div>
+         <!-- /.col-md-3 -->
+         <div class="col-md-4">
+            <img class="prtn-img" src="img/partners/Blockchain.png" alt="">
+         </div>
+         <!-- /.col-md-3 -->
+         <div class="col-md-2 offset-md-1">
+            <img class="prtn-img" src="img/partners/bitmex.png" alt="">
+         </div>
+         <!-- /.col-md-3 -->
+      </div>
+      <!-- /.row -->
+   </div>
+   <!-- /.container -->
+</section>
+<!-- /.partners -->
+<section class="top-nft">
+   <div class="container">
+      <div class="row">
+         <div class="col-md-6">
+            
+         </div>
+         <!-- /.col-md-6 -->
+         <div class="col-md-6"></div>
+         <!-- /.col-md-6 -->
+      </div>
+      <!-- /.row -->
+   </div>
+   <!-- /.container -->
+</section>
+<!-- /.top-nft -->
 </body>
 </html>
