--- a/public/index.html
+++ b/public/index.html
@@ -227,5 +227,8 @@
    <!-- /.container -->
 </section>
 <!-- /.top-nft -->
+
+<section class="top-nft"></section>
+<!-- /.top-nft -->
 </body>
 </html>
