--- a/public/index.html
+++ b/public/index.html
@@ -228,7 +228,9 @@
 </section>
 <!-- /.top-nft -->
 
-<section class="top-nft"></section>
+<section class="top-nft">
+   <h1>Hello</h1>
+</section>
 <!-- /.top-nft -->
 </body>
 </html>
